--- a/index.html
+++ b/index.html
@@ -1,65 +1,91 @@
+<!DOCTYPE html>
 <html>
 <head>
-  <title>Voice to Text</title>
+  <title>Voice Chat / Transcription</title>
   <style>
-    * { font-size: 16px; }
-    body {
-      padding: 8px 16px;
-      font-family: sans-serif;
-      min-width: 90vw;
-      min-height: 90vh;
-    }
-    button, select {
-      padding: 8px;
-      margin: 8px;
-      width: 200px;
-    }
-    #output {
-      padding: 8px;
-      margin: 8px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      height: 85vh;
-    }
+    body { font-family: sans-serif; padding: 16px; }
+    #output { border: 1px solid #ccc; padding: 8px; height: 300px; overflow-y: auto; }
+    #messageInput { width: 70%; padding: 8px; }
+    button { padding: 8px; margin-left: 4px; }
   </style>
 </head>
 <body>
+  <h2>Voice Chat</h2>
+  <div id="output"></div>
 
-  <button id="startButton">Start Voice Input</button>
-  <button id="clear">Clear</button>
+  <!-- Voice control buttons -->
+  <button id="startVoiceBtn">Start Recording</button>
+  <button id="stopVoiceBtn">Stop Recording</button>
+  <br><br>
 
-  <select id="language" onchange="onLanguageChange()">
-    <option value="en-US">English</option>
-    <option value="hi-IN">Hindi</option>
-  </select>
-
-  <div id="output" contentEditable="true"></div>
+  <input type="text" id="messageInput" placeholder="Type a message">
+  <button id="sendBtn">Send</button>
 
   <script>
-    const startButton = document.getElementById("startButton");
     const outputDiv = document.getElementById("output");
-    const clearButton = document.getElementById("clear");
+    const messageInput = document.getElementById("messageInput");
+    const sendBtn = document.getElementById("sendBtn");
+    const startVoiceBtn = document.getElementById("startVoiceBtn");
+    const stopVoiceBtn = document.getElementById("stopVoiceBtn");
 
-    const recognition = new (window.SpeechRecognition ||
-      window.webkitSpeechRecognition)();
-
+    // -------------------- Speech Recognition --------------------
+    const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
     recognition.lang = "en-US";
+    recognition.continuous = true;
+
+    let transcriptBuffer = "";
+    let isRecording = false;
 
     recognition.onresult = (event) => {
-      outputDiv.textContent += " " + event.results[0][0].transcript;
+      const transcript = event.results[event.results.length - 1][0].transcript;
+      transcriptBuffer += transcript + " ";
+      outputDiv.innerHTML += "<div><b>Recording:</b> " + transcript + "</div>";
+      outputDiv.scrollTop = outputDiv.scrollHeight;
     };
 
-    recognition.onstart = () => startButton.textContent = "Listening...";
-    recognition.onend = () => startButton.textContent = "Start Voice Input";
+    recognition.onstart = () => {
+      isRecording = true;
+      startVoiceBtn.disabled = true;
+      stopVoiceBtn.disabled = false;
+    };
 
-    startButton.addEventListener("click", () => recognition.start());
-    clearButton.addEventListener("click", () => outputDiv.textContent = "");
+    recognition.onend = () => {
+      isRecording = false;
+      startVoiceBtn.disabled = false;
+      stopVoiceBtn.disabled = true;
+    };
 
-    function onLanguageChange() {
-      recognition.lang = document.getElementById("language").value;
-    }
+    startVoiceBtn.addEventListener("click", () => recognition.start());
+    stopVoiceBtn.addEventListener("click", () => recognition.stop());
+
+    // Initially disable Stop button
+    stopVoiceBtn.disabled = true;
+
+    // -------------------- Send transcript every 30 seconds --------------------
+    setInterval(() => {
+      if (transcriptBuffer.trim() === "") return;
+      fetch("http://localhost:5000/send", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ text: transcriptBuffer })
+      });
+      transcriptBuffer = ""; // clear buffer after sending
+    }, 30000);
+
+    // -------------------- User manual message --------------------
+    sendBtn.addEventListener("click", () => {
+      const msg = messageInput.value.trim();
+      if (!msg) return;
+      outputDiv.innerHTML += "<div><b>You:</b> " + msg + "</div>";
+      messageInput.value = "";
+
+      fetch("http://localhost:5000/send", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ text: msg })
+      });
+    });
   </script>
-
 </body>
 </html>
 
