--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
   <div class="notes-container">
     <div class="notes-header">
       <h2>📝 Passing Notes</h2>
-      <div class="status">Whispering with Gemini AI • Class is in session</div>
+      <div class="status">Whispering with AI • Class is in session</div>
     </div>
     
     <div class="transcript-indicator" id="transcriptIndicator">
